# LiDARTag

./: .gitignore  CMakeLists.txt  package.xml
cmake/: FindTBB.cmake
include/: KDTreeVectorOfVectorsAdaptor.h  apriltag_utils.h  lidartag.h  nanoflann.hpp  thread_pool.h  types.h  ultra_puck.h  utils.h
src/: apriltag_utils.cc  lidartag.cc  lidartag_cluster.cc  lidartag_decode.cc  lidartag_pose.cc  lidartag_prune.cc  lidartag_rviz.cc  main.cc  tag16h5.cc  tag49h14.cc  utils.cc
