<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>lidartag</name>
  <version>0.0.0</version>
  <description>A package for lidartag</description>
  <maintainer email="bjhuang@umich.edu">brucebot</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>lidartag_msgs</depend>

  <depend>apriltag_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>velodyne_pcl</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>visualization_msgs</depend>

</package>

